<resources>
    <string name="app_name">Good Count</string>

    // Facebook
    <string name="facebook_app_id" translatable="false">360557888140915</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb360557888140915</string>
    <string name="disconnect">Disconnect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_good_count">New Good Count</string>
    <string name="join_a_good_count">Join a Good Count</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="currency">Currency</string>
    <string name="add">Add</string>
    <string name="your_name">Your username</string>
    <string name="create">Create</string>
    <string name="tab_title_1">SPENT</string>
    <string name="tab_title_2">BALANCE</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="payed_by">Paid by</string>
    <string name="for_who">Participant(s)</string>
    <string name="total_cost">Total cost</string>
    <string name="personal_cost">My cost</string>
    <string name="me">me</string>
    <string name="you_must_add_a_title">You must add a title</string>
    <string name="you_must_add_an_amount">You must add an amount</string>
    <string name="you_must_allocate_the_amount_to_at_least_one_participant">You must allocate the amount to at least one
        participant
    </string>
    <string name="successful_creation">Successful creation</string>
    <string name="successful_delete">Successful delete</string>
    <string name="successful_update">Successful update</string>
    <string name="error_creating">Error creating</string>
    <string name="error_updating">Error updating</string>
    <string name="error_deleting">Error deleting</string>
    <string name="you_must_enter_your_username">You must enter your username</string>
    <string name="validate_the_change">Validate the changes</string>
    <string name="join_me_on_good_count">Join me on GoodCount</string>
    <string name="undo">Undo</string>
    <string name="enter_your_name">Enter your username</string>
    <string name="create_user">Create participant</string>
    <string name="delete_good_count">Delete Good Count</string>
    <string name="are_you_sure_you_want_to_permanently_delete_the_Good_Count">Are you sure you want to permanently delete the Good Count?</string>
    <string name="delete">Delete</string>
    <string name="remove_from_your_list">Good Count remove from your list</string>
    <string name="failed_to_delete_your_list">Failed to delete your list</string>
    <string name="ask_your_friends_for_the_pot_sharing_code">Ask your friends for the pot sharing code</string>
    <string name="click_on_to_add_an_spent">Click on + to add an spent</string>
    <string name="no_spent">No spent</string>
    <string name="click_to_create_a_good_count">Click + to create a Good Count</string>
    <string name="no_good_count">No Good Count</string>


</resources>
